unpackaged/main/default/objects/X1035_Rider__c/X1035_Rider__c.object-meta.xml
<CustomObject>
    <label>1035 Rider</label>
    <nameField>
        <displayFormat>1035R-{00000}</displayFormat>
        <label>1035 Rider</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1035 Riders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>