unpackaged/main/default/objects/X1035_Rider__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>1035 Riders</relationshipLabel>
    <relationshipName>X1035_Riders</relationshipName>
    <type>Lookup</type>
</CustomField>