unpackaged/main/default/objects/X1035_Rider__c/fields/Rider_Name__c.field-meta.xml
<CustomField>
    <fullName>Rider_Name__c</fullName>
    <label>Rider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>