unpackaged/main/default/objects/X1035_Rider__c/fields/Rider_Number__c.field-meta.xml
<CustomField>
    <fullName>Rider_Number__c</fullName>
    <label>Rider Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rider 1</fullName>
            </value>
            <value>
                <fullName>Rider 2</fullName>
            </value>
            <value>
                <fullName>Rider 3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>