unpackaged/main/default/objects/X1035_Rider__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>1035 Riders</relationshipLabel>
    <relationshipName>X1035_Riders</relationshipName>
    <type>Lookup</type>
</CustomField>